All_Component_DX/force-app/main/default/objects/Site__c/fields/Costed_at_value__c.field-meta.xml
<CustomField>
    <fullName>Costed_at_value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if inventory in this location is priced using pricebook value or priced at zero.</description>
    <inlineHelpText>Flag indicates if inventory in this location is priced using pricebook value or priced at zero.</inlineHelpText>
    <label>Costed at value</label>
    <type>Checkbox</type>
</CustomField>