All_Component_DX/force-app/main/default/objects/Site__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Location Email</description>
    <inlineHelpText>Location Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>