All_Component_DX/force-app/main/default/objects/Site__c/fields/IsDefault_Delivery__c.field-meta.xml
<CustomField>
    <fullName>IsDefault_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Delivery</label>
    <type>Checkbox</type>
</CustomField>