All_Component_DX/force-app/main/default/objects/Site__c/fields/IsReceiving_Location__c.field-meta.xml
<CustomField>
    <fullName>IsReceiving_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Receiving Location</label>
    <type>Checkbox</type>
</CustomField>