All_Component_DX/force-app/main/default/objects/Site__c/fields/IsRepair_Location__c.field-meta.xml
<CustomField>
    <fullName>IsRepair_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Repair Location</label>
    <type>Checkbox</type>
</CustomField>