All_Component_DX/force-app/main/default/objects/Site__c/fields/IsStaging_Location__c.field-meta.xml
<CustomField>
    <fullName>IsStaging_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Staging Location</label>
    <type>Checkbox</type>
</CustomField>