All_Component_DX/force-app/main/default/objects/Site__c/fields/Preferred_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work order location is open or accessible for service technician during these hours of the week</description>
    <inlineHelpText>The work order location is open or accessible for service technician during these hours of the week</inlineHelpText>
    <label>Access Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>