All_Component_DX/force-app/main/default/objects/Site__c/fields/Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Service Engineer associated with the site.</description>
    <inlineHelpText>Name of the Service Engineer associated with the site.</inlineHelpText>
    <label>Service Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>