All_Component_DX/force-app/main/default/objects/Site__c/fields/Site_Fax__c.field-meta.xml
<CustomField>
    <fullName>Site_Fax__c</fullName>
    <description>Main fax number for the site if available</description>
    <inlineHelpText>Main fax number for the site if available</inlineHelpText>
    <label>Site Fax</label>
    <type>Phone</type>
</CustomField>