All_Component_DX/force-app/main/default/objects/Site__c/fields/Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone__c</fullName>
    <description>Main phone number for the site if available</description>
    <inlineHelpText>Main phone number for the site if available</inlineHelpText>
    <label>Site Phone</label>
    <type>Phone</type>
</CustomField>