All_Component_DX/force-app/main/default/objects/Site__c/fields/SM_External_Company__c.field-meta.xml
<CustomField>
    <fullName>SM_External_Company__c</fullName>
    <description>External system unique ID of the account related to the location.</description>
    <inlineHelpText>External system unique ID of the account related to the location.</inlineHelpText>
    <label>Account (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>