All_Component_DX/force-app/main/default/objects/Site__c/recordTypes/Inventory_Location.recordType-meta.xml
<RecordType>
    <fullName>Inventory_Location</fullName>
    <active>true</active>
    <description>Depot Child</description>
    <label>Depot Child</label>
</RecordType>