All_Component_DX/force-app/main/default/objects/Site__c/recordTypes/Inventory_Org.recordType-meta.xml
<RecordType>
    <fullName>Inventory_Org</fullName>
    <active>true</active>
    <description>Depot Parent</description>
    <label>Depot Parent</label>
</RecordType>