All_Component_DX/force-app/main/default/objects/Site__c/recordTypes/Standard_Location.recordType-meta.xml
<RecordType>
    <fullName>Standard_Location</fullName>
    <active>true</active>
    <description>Standard Location</description>
    <label>Standard Location</label>
</RecordType>