All_Component_DX/force-app/main/default/objects/Site__c/listViews/All_Locations.listView-meta.xml
<ListView>
    <fullName>All_Locations</fullName>
    <columns>NAME</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <columns>Country__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Location</label>
    <language>en_US</language>
</ListView>